[package]
name = "async-await-comparison"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "macros"] }
image = "0.25.6"
windows = { version = "0.61.1", features = ["Win32", "Win32_System", "Win32_System_Threading", "Win32_System_ProcessStatus"] }